# Flexiglass

./: CMakeLists.txt  Makefile  README.md
examples/basic/: Makefile  basic.cpp
examples/parrot/: Makefile  parrot.cpp
examples/text_reader/: Makefile  file.txt  output.txt  text_reader.cpp
include/: Flexiglass.hpp
include/flexiglass/: Event.hpp  Event_Queue.hpp  Event_Receivable.hpp  Event_Sender.hpp  common.hpp
src/: Event.hpp  Event_Listener.cpp  Event_Listener.hpp  Event_Queue.cpp  Event_Queue.hpp  Event_Receivable.hpp  Event_Sender.cpp  Event_Sender.hpp  Flexiglass.hpp  README.md  any.hpp  common.hpp  license.txt
